<resources>
    <string name="app_name">week_three</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Home</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="tab_rock">Rock</string>
    <string name="tab_pop">Pop</string>
    <string name="tab_classic">Classic</string>
    <string name="content_description">content_description</string>
    <string name="track_title">Somebody some one (Explicit)</string>
    <string name="track_artist">Korn</string>
    <string name="track_price">2.99 USD</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- TODO: Remove or change this placeholder text -->
</resources>