<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="4dp"
    android:orientation="vertical"
    tools:showIn="@layout/fragment_home">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="10dp"
        android:layout_margin="8dp"
        app:cardCornerRadius="10dp">

        <RelativeLayout
            android:padding="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <ImageView
                android:id="@+id/artist_cover"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_alignParentStart="true"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/image_frame"
                android:padding="8dp"
                android:contentDescription="@string/content_description"
                app:srcCompat="@drawable/ic_rock" />

            <TextView
                android:id="@+id/tract_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/artist_cover"
                android:text="@string/track_title"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tract_artist"
                android:text="@string/track_artist"
                android:layout_below="@id/tract_title"
                android:layout_toEndOf="@id/artist_cover" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/track_id"
                android:text="@string/track_price"
                android:textStyle="bold"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>