<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="8dp"
    app:cardCornerRadius="10dp"
    android:elevation="15dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_grey"
    tools:context=".views.PlayerFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/player_close_btn"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/ic_close"
            android:layout_gravity="end"
            android:background="@android:color/transparent"
            android:layout_margin="8dp"
            android:contentDescription="@string/content_description"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            >

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/player_cover_frame"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_alignParentTop="true"
                android:layout_centerInParent="true"
                android:elevation="15dp">

                <ImageView
                    android:id="@+id/player_cover"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:contentDescription="@string/content_description"
                    android:src="@drawable/ic_launcher_background" />

            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/player_artist"
                android:text="@string/track_artist"
                android:textSize="22sp"
                android:layout_below="@id/player_cover_frame"
                android:layout_marginTop="16dp"
                android:layout_centerHorizontal="true"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/player_track_title"
                android:textSize="16sp"
                android:text="@string/track_title"
                android:layout_below="@id/player_artist"
                android:layout_marginTop="8dp"
                android:layout_centerHorizontal="true"/>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btn_play_pause"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_below="@id/player_track_title"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="26dp"
                android:layout_marginTop="26dp"
                android:layout_marginEnd="26dp"
                android:layout_marginBottom="26dp"
                android:contentDescription="@string/content_description"
                app:srcCompat="@drawable/ic_pause" />

<!--            <com.google.android.material.card.MaterialCardView-->
<!--                android:layout_width="80dp"-->
<!--                android:layout_height="80dp"-->
<!--                android:id="@+id/btn_frame"-->
<!--                android:layout_below="@id/player_track_title"-->
<!--                android:layout_centerHorizontal="true"-->
<!--                android:background="@color/light_grey"-->
<!--                android:layout_marginTop="16dp"-->
<!--                android:elevation="50dp"-->
<!--                app:cardCornerRadius="100dp"/>-->

        </RelativeLayout>

    </LinearLayout>


</com.google.android.material.card.MaterialCardView>